Overview/Home(nl) - functionality and mobile styling (#50)
* Installed graphql, apollo, express-server and initialized server app.ts page

* Connected to localhost:4000/graphql, now attemtping to connect front end to graphql sever

* Created fetch route on handlesubmit to retreive graphql server user data, still testing

* Fixing package lock for graphql set up push`

* Successfully connected frontend to graphql

* Created currentUser & error states for future purposes. Currently the axios request is not handling errors properly due to how the the error is thrown on server side- need to fix this eventually

* Completely set up login authentication, cookie session, and hashrouter for refreshes

* Commenting out import due to ESLint error, but currently not important

* Commenting out import file ESLint error

* Disabling some unnecessary eslint errors

* Updated package lock

* Removing h1 tag

* Created Sign up page, styled it to match Login page, has links to login page, functionality 40% complete

* Minor changes to Sing up styling

* Implemented simple validation functions and subsequent error messaging on front end

* Added simple input validaiton for phone number + error messaging front end

* Created password checker modal for sign up page (validates & shows checklist completion on typing-

* styling for password checker modal

* Created additional information page (transition page between sign up and home page - not accessible through other means) styled but not functional yet

* Fixing merge conflicts

* Styled Header & navbar to match mock up

* Connected routes for home/overview when successfuly logged in and also log out paths

* Created and styled profile page and forms in settings - not functional yet

* Added button functionality to the tabs and created the Accounts page.

* Created notifcations page and settings page + styling. Notifications page still needs mobile styling

* Fixing width on header



--- a/public/assets/Styles/05.Overview/Overview.scss
+++ b/public/assets/Styles/05.Overview/Overview.scss
@@ -38,6 +38,13 @@ $border: none;
       height: 95%;
     }
 
+    @media all and (max-width: 900px) {
+      @include flexCenter(column);
+      justify-content: space-between;
+      align-items: center;
+      width: 90%;
+      height: 95%;
+    }
 
     .overview-side-panel {
       @include flexCenter(column);
@@ -45,12 +52,17 @@ $border: none;
       align-items: center;
       height: 100%;
       width: 30%;
+
+      @media all and (max-width: 900px) {
+        width: 80%;
+      }
+
       .overview-welcome-bubble {
         width: 100%;
         height: 15%;
         text-align: center;
         font-size: 1.3em;
-        color:rgb(97, 97, 97);
+        color: rgb(97, 97, 97);
         padding: 1em;
         border: $border;
         border-radius: 20px;
@@ -66,6 +78,10 @@ $border: none;
         }
         @media all and (max-width: 1300px) {
           font-size: 1.2em;
+        }
+
+        @media all and (max-width: 900px) {
+          width: 65%;
         }
       }
       .overview-accounts-container {
@@ -92,6 +108,10 @@ $border: none;
           }
         }
 
+        @media all and (max-width: 900px) {
+          margin-bottom: 3em;
+        }
+
         .accounts-title-section {
           @include flexCenter(row);
           justify-content: space-between;
@@ -102,7 +122,7 @@ $border: none;
           }
           .bank-icon {
             font-size: 2.3em;
-            color:rgb(130, 130, 130);
+            color: rgb(130, 130, 130);
           }
         }
         .account-mini-container {
@@ -138,6 +158,11 @@ $border: none;
               .account-text {
                 font-size: 0.8em;
                 color: rgb(58, 58, 58);
+
+                @media all and (max-width: 900px) {
+                  font-size: 1.1em;
+                  color: rgb(58, 58, 58);
+                }
               }
             }
           }
@@ -155,6 +180,11 @@ $border: none;
       justify-content: space-between;
       width: 65%;
       height: 100%;
+
+      @media all and (max-width: 900px) {
+        width: 90%;
+      }
+
       .overview-snapshots {
         @include flexCenter(row);
         justify-content: space-between;
@@ -168,35 +198,51 @@ $border: none;
 
         &:hover {
           background-color: rgb(233, 233, 233);
-          outline: 2px solid  rgb(144, 213, 200);
+          outline: 2px solid rgb(144, 213, 200);
         }
-        .overview-text {
-          @include flexCenter(column);
-          justify-content: space-evenly;
-          align-items: flex-start;
+
+        .goalchart-mini-container {
+          @include flexCenter(row);
+          justify-content: flex-start;
           height: 100%;
-          width: 50%;
-          padding: 0.5em;
-          padding-left: 2em;
-          margin: 0em;
-          .snapshot-overall-title {
-            font-size: 1.3em;
-            color: rgb(116, 116, 116);
-            margin: 0;
+          width: 100%;
+          position: relative;
+
+          @media all and (max-width: 1050px) {
+            justify-content: center;
           }
-        }
-        .overview-graphic {
-          height: 50%;
-          width: 35%;
-          padding: 0.5em;
+
+          .click-message {
+            position: absolute;
+            @include flexCenter(column);
+            justify-content: flex-end;
+            align-items: center;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(233, 233, 233, 0.5);
+            color: rgb(33, 142, 134);
+            font-size: 1.5em;
+            font-weight: bold;
+            transition: 0.5s ease;
+            opacity: 0;
+
+            &:hover {
+              opacity: 1;
+            }
+          }
         }
       }
     }
   }
-
 }
 
 img.graphic {
   width: 200px;
   height: 200px;
+}
+
+img.sub-logo {
+  width: 35px;
+  height: 40px;
+  object-fit: contain;
 }
