--- a/public/assets/Styles/00.Global/global.scss
+++ b/public/assets/Styles/00.Global/global.scss
@@ -16,6 +16,9 @@
 @import "../06.Goals/Goals.scss";
 @import "../08.Subscriptions/Subscriptions.scss";
 @import "../08.Subscriptions/Subchart/SubCharts.scss";
+@import "../05.Overview/goalsMini/goalsMini";
+@import "../05.Overview/subsMini/subsMini";
+@import "../05.Overview/budgeMini/budgeMini.scss";
 
 body,
 html {
